--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -8,14 +8,14 @@ jobs:
   build:
     name: Android Build
     permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: macos-15
     steps:
       - name: Pulling the new commit
         uses: actions/checkout@v4
       - name: Setting up Haxe
         uses: krdlab/setup-haxe@v1
         with:
-          haxe-version: 4.3.0
+          haxe-version: 4.3.5
       - name: Restore existing build cache for faster compilation
         uses: actions/cache@v4
         with:
@@ -34,10 +34,12 @@ jobs:
         run: |
           haxelib run lime config ANDROID_SDK $ANDROID_HOME
           haxelib run lime config ANDROID_NDK_ROOT $ANDROID_NDK_LATEST_HOME
-          haxelib run lime config JAVA_HOME $JAVA_HOME_21_X64
+          haxelib run lime config JAVA_HOME $JAVA_HOME_21_arm64
           haxelib run lime config ANDROID_SETUP true
-          sed -i '/<section if="android">/,/<\/section>/c\
-          \t<config:android>\n\t\t<application android:appCategory="game" />\n\t</config:android>' $(haxelib libpath flixel)/include.xml
+          sed -i '' '/<section if="android">/,/<\/section>/c\
+          <config:android>\
+              <application android:appCategory="game" />\
+          </config:android>' $(haxelib libpath flixel)/include.xml
       - name: Building the game
         run: haxelib run lime build android -final
       - name: Uploading artifact (entire build)
