--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -37,7 +37,7 @@ jobs:
           haxelib run lime config JAVA_HOME $JAVA_HOME_21_arm64
           haxelib run lime config ANDROID_SETUP true
       - name: Building the game
-        run: haxelib run lime build android -final
+        run: haxelib run lime build android -eval -final
       - name: Uploading artifact (entire build)
         uses: actions/upload-artifact@v4
         with:
